Make sure messages don't overflow the page width

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -537,6 +537,9 @@ h6
   z-index: 2
   height: auto
 
+  pre
+    white-space: pre-wrap
+
 .message
   padding: 0.5em 1em
   font-weight: bold
